force-app/main/default/objects/zisf__Zoom_Scheduler__c/zisf__Zoom_Scheduler__c.object-meta.xml
<CustomObject>
    <label>Zoom Scheduler</label>
    <nameField>
        <label>Zoom Scheduler Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zoom Schedulers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>