force-app/main/default/objects/zisf__Zoom_Scheduler__c/fields/zisf__Account_Job_Cron_Expr__c.field-meta.xml
<CustomField>
    <fullName>zisf__Account_Job_Cron_Expr__c</fullName>
    <label>Account Job Cron Expr</label>
    <length>80</length>
    <type>Text</type>
</CustomField>