force-app/main/default/objects/zisf__Zoom_Scheduler__c/fields/zisf__Account_Job_Cron_ID__c.field-meta.xml
<CustomField>
    <fullName>zisf__Account_Job_Cron_ID__c</fullName>
    <label>Account Job Cron ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>