force-app/main/default/objects/zisf__Zoom_Scheduler__c/fields/zisf__CronJobList__c.field-meta.xml
<CustomField>
    <fullName>zisf__CronJobList__c</fullName>
    <label>CronJobList</label>
    <length>255</length>
    <type>Text</type>
</CustomField>